--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,7 @@
     Some text here
 
     \section{Education}
-        \education{Tufts University}{Medford, MA}{August 2014}{May 2018}{BS in Chemical Engineering, BS in Mathematics}{4.0}
+        \education{Tufts University}{Medford, MA}{September 2014 - May 2018 (expected)}{BS in Chemical Engineering,BS in Mathematics}
 
     \section{Employment}
         \employment{Cafe Provence}{Brandon, VT}{July 2013 - Present}{Server, Host}
