--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,11 @@
     Some text here
 
     \section{Education}
-        \education{Tufts University}{Medford, MA}{September 2014 - May 2018 (expected)}{BS in Chemical Engineering,BS in Mathematics}
+        \education{Tufts University}{Medford, MA}{September 2014 - May 2018 (expected)}{BS in Chemical Engineering\newline,BS in Mathematics}
+        \begin{itemize}[noitemsep]
+            \item GPA: 4.00
+            \item Dean's List all semesters (as of May 2016)
+        \end{itemize}
 
     \section{Employment}
         \employment{Cafe Provence}{Brandon, VT}{July 2013 - Present}{Server, Host}
