--- a/resume.tex
+++ b/resume.tex
@@ -1,12 +1,19 @@
-\documentclass[12 pt]{resume}
+\documentclass{resume}
 \usepackage{enumitem}
 
 \begin{document}
 
+    \pagenumbering{gobble}
+
     \name{Christopher Keyes}
 
+    \noindent \contact{15 Carver St, Brandon, VT 05733}{christopher.keyes@tufts.edu}{(802)353-1034}
+
     \section{Profile}
-    Some text here
+    Articulate and well-rounded student with interests in mathematics and engineering; effective at communicating complex ideas to others.
+
+    \section{Goal}
+    To gain experience with technical problem solving within a collaborative organization.
 
     \section{Education}
         \education{Tufts University}{Medford, MA}{September 2014 - May 2018 (expected)}{BS in Chemical Engineering\newline,BS in Mathematics}
@@ -23,8 +30,13 @@
         \end{itemize}
         \employment{Tufts STOMP}{Medford, MA}{January 2015 - Present}{Fellow}
         \begin{itemize}[noitemsep]
-            \item Worked Closely with a partner to develop curricula and individual lessons
+            \item Worked closely with a partner to develop curricula and individual lessons
             \item Led weekly engineering lessons in fifth grade classrooms
+        \end{itemize}
+        \employment{RNESU Information Technology}{Brandon, VT}{July 2015 - August 2015}{Intern}
+        \begin{itemize}[noitemsep]
+            \item Performed computer maintenance at elementary and high schools
+            \item Supervised elementary students learning programming at summer day camp
         \end{itemize}
 
 
