--- a/resume.tex
+++ b/resume.tex
@@ -39,7 +39,12 @@
             \item Supervised elementary students learning programming at summer day camp
         \end{itemize}
 
+    \section{Skills}
+    C++, MATLAB, HTML/CSS, PHP, git
 
+    \section{Relevant Coursework}
+
+    \section{Community Service}
 
 
 \end{document}
