adj margin, rem HS, fit on 1 pg

--- a/resume.tex
+++ b/resume.tex
@@ -7,44 +7,47 @@
 
     \name{Christopher Keyes}
 
-    \noindent \contact{15 Carver St, Brandon, VT 05733}{christopher.keyes@tufts.edu}{(802)353-1034}
+    \contact{15 Carver St, Brandon, VT 05733}{christopher.keyes@tufts.edu}{(802)-353-1034}
 
     \section{Profile}
-    Articulate and well-rounded student with interests in mathematics and engineering; effective at communicating complex ideas to others.
+    Articulate and well-rounded student with interests in mathematics and engineering, looking to gain problem solving experience within a collaborative organization.
 
-    \section{Goal}
-    To gain experience with technical problem solving within a collaborative organization.
+    % \section{Goal}
+    % To gain experience with technical problem solving within a collaborative organization.
 
     \section{Education}
-        \education{Tufts University}{Medford, MA}{September 2014 - May 2018 (expected)}{BS in Chemical Engineering\newline,BS in Mathematics}
+        \education{Tufts University}{Medford, MA}{September 2014 - May 2018 (expected)}{BS in Chemical Engineering\newline,BS in Mathematics\newline,Minor in Computer Science}
         \begin{itemize}[noitemsep]
             \item GPA: 4.00
-            \item Dean's List all semesters (as of May 2016)
+            \item Recipient of 2016 Karno Dean's Award for Academic Excellence and Leadership
+            \item Recipient of National Merit Scholarship
         \end{itemize}
 
     \section{Employment}
-        \employment{Cafe Provence}{Brandon, VT}{July 2013 - Present}{Server, Host}
-        \begin{itemize}[noitemsep]
-            \item Served customers and trained new staff members
-            \item Oversaw nightly closing procedures and financial protocols
-        \end{itemize}
-        \employment{Tufts STOMP}{Medford, MA}{January 2015 - Present}{Fellow}
-        \begin{itemize}[noitemsep]
-            \item Worked closely with a partner to develop curricula and individual lessons
-            \item Led weekly engineering lessons in fifth grade classrooms
-        \end{itemize}
-        \employment{RNESU Information Technology}{Brandon, VT}{July 2015 - August 2015}{Intern}
-        \begin{itemize}[noitemsep]
-            \item Performed computer maintenance at elementary and high schools
-            \item Supervised elementary students learning programming at summer day camp
-        \end{itemize}
+        \begin{trivlist}
+            \item \employment{Cafe Provence}{Brandon, VT}{July 2013 - Present}{Server, Host}
+
+            \item \employment{Tufts STOMP}{Medford, MA}{January 2015 - Present}{Fellow}
+
+            \item \employment{RNESU Information Technology}{Brandon, VT}{July 2015 - August 2015}{Intern}
+        \end{trivlist}
 
     \section{Skills}
     C++, MATLAB, HTML/CSS, PHP, git
 
     \section{Relevant Coursework}
+    Introduction to Computer Science, Data Structures, Mathematical Modeling, Discrete Mathematics, Numerical Methods, Numerical Linear Algebra
 
-    \section{Community Service}
+    \section{Activities}
+        \begin{trivlist}{}{
+            \item \activity{Tufts AIChE}{Secretary (Past: Publicity Coord.)}{September 2014 - Present}
 
+            \item \activity{Tufts University Ballroom Dance Team}{Team Captain}{September 2014 - Present}
+
+            \item \activity{Tufts University Pep Band and Chamber Jazz}{Percussionist}{September 2014 - Present}
+
+            \item \activity{Mathematical Contest in Modeling}{Honorable Mention}{January 2016}
+        }
+        \end{trivlist}
 
 \end{document}
