--- a/resume.tex
+++ b/resume.tex
@@ -10,10 +10,7 @@
     \contact{15 Carver St, Brandon, VT 05733}{christopher.keyes@tufts.edu}{(802)-353-1034}
 
     \section{Profile}
-    Articulate and well-rounded student with interests in mathematics and engineering, looking to gain problem solving experience within a collaborative organization.
-
-    % \section{Goal}
-    % To gain experience with technical problem solving within a collaborative organization.
+    Articulate and well-rounded student with interests in mathematics, computer science, and engineering, looking to gain problem solving experience within a collaborative organization.
 
     \section{Education}
         \education{Tufts University}{Medford, MA}{September 2014 - May 2018 (expected)}{BS in Chemical Engineering\newline,BS in Mathematics\newline,Minor in Computer Science}
@@ -28,6 +25,8 @@
             \item \employment{Cafe Provence}{Brandon, VT}{July 2013 - Present}{Server, Host}
 
             \item \employment{Tufts STOMP}{Medford, MA}{January 2015 - Present}{Fellow}
+
+            \item \employment{Governor's Institutes of Vermont - Engineering}{Burlington, VT}{July 2016}{Counselor}
 
             \item \employment{RNESU Information Technology}{Brandon, VT}{July 2015 - August 2015}{Intern}
         \end{trivlist}
