Move coursework to education; add descriptions to employment

--- a/resume.tex
+++ b/resume.tex
@@ -10,7 +10,7 @@
     \contact{15 Carver St, Brandon, VT 05733}{christopher.keyes@tufts.edu}{(802)-353-1034}
 
     \section{Profile}
-    Articulate and well-rounded student with interests in mathematics, computer science, and engineering, looking to gain problem solving experience within a collaborative organization.
+    Articulate and well-rounded student with interests in mathematics, computer science, and engineering; a quick learner, looking to gain problem solving experience within a collaborative organization.
 
     \section{Education}
         \education{Tufts University}{Medford, MA}{September 2014 - May 2018 (expected)}{BS in Chemical Engineering\newline,BS in Mathematics\newline,Minor in Computer Science}
@@ -19,29 +19,27 @@
             \item Recipient of 2016 Karno Dean's Award for Academic Excellence and Leadership
             \item Recipient of National Merit Scholarship
         \end{itemize}
+\textit{Curriculum Highligts}: Data Structures, Cryptography, Mathematical Modeling, Differential Equations, Abstract Algebra, Real Analysis, Numerical Linear Algebra, Design of Experiments, Thermodynamics
 
     \section{Employment}
         \begin{trivlist}
-            \item \employment{Cafe Provence}{Brandon, VT}{July 2013 - Present}{Server, Host}
+            \item \employment{Tufts STOMP}{Medford, MA}{January 2015 - Present}{Fellow}{Developed engineering curricula for use in elementary classrooms. Led weekly lessons at area schools.}
 
-            \item \employment{Tufts STOMP}{Medford, MA}{January 2015 - Present}{Fellow}
+            \item \employment{Cafe Provence}{Brandon, VT}{July 2013 - August 2016}{Server, Host}{Oversaw nightly closing financial procedures.}
 
-            \item \employment{Governor's Institutes of Vermont - Engineering}{Burlington, VT}{July 2016}{Counselor}
+            \item \employment{Governor's Institutes of Vermont - Engineering}{Burlington, VT}{July 2016}{Counselor}{Teaching assistant in LEGO robotics project group. Supervised students and led activities during down-time at the dormitory.}
 
-            \item \employment{RNESU Information Technology}{Brandon, VT}{July 2015 - August 2015}{Intern}
+            \item \employment{RNESU Information Technology}{Brandon, VT}{July 2015 - August 2015}{Intern}{Assisted with maintenance tasks across four schools, including cleaning and configuring student machines.}
         \end{trivlist}
 
-    \section{Skills}
-    C++, MATLAB, HTML/CSS, PHP, git
-
-    \section{Relevant Coursework}
-    Introduction to Computer Science, Data Structures, Mathematical Modeling, Discrete Mathematics, Numerical Methods, Numerical Linear Algebra
+    \section{Computing}
+    C++, MATLAB, LaTeX, Office, git, HTML/CSS, PHP
 
     \section{Activities}
         \begin{trivlist}{}{
-            \item \activity{Tufts AIChE}{Secretary (Past: Publicity Coord.)}{September 2014 - Present}
+	    \item \activity{Tufts University Ballroom Dance Team}{Team Captain}{September 2014 - Present}
 
-            \item \activity{Tufts University Ballroom Dance Team}{Team Captain}{September 2014 - Present}
+            \item \activity{Tufts American Institute of Chemical Engineers}{Secretary (Past: Publicity Coordinator)}{September 2014 - Present}
 
             \item \activity{Tufts University Pep Band and Chamber Jazz}{Percussionist}{September 2014 - Present}
 
